# Demo

./: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Object.hpp  README.md  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SomethingWorthNoticing  Triangle.hpp  global.hpp  main.cpp
renderer/: Intersection.hpp  Material.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp
